# python-code-

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pulumi.yml  Pulumi123123123123.json  Pulumi2.yml  Pulumiasdkasfasfkhegfkwerhkjwhgkjh.yml  Pulumilalalalalalalalalalalala.yml  a.java  a.js  a.py  a.tf  aaaaa1.py  adafaf.tf  asdasdasdasdas  asdasdsadds.py  b.tf  bbb.py  boo.java  c.tf  d.tf  dudi.py  dudu.txt  f.tf  ffsd.tf  file.clj  file.json  file.py  file1.py  file_1.py  file_106.py  foo.java  ggggggg.tf  index.js  kub1.yml  kub2.yml  la.yml  package-lock.json  package.json  (+18 more)
.env/: .local  .pytest  .register
.github/workflows/: deploy.yml  deployment.yml  gcp.yml  snyk-container-scan.yml
.github/workflows /: deployment.yml
.jit/: config.yml
.pulumi/: fff
.run/: Component Tests.run.xml  Unit Tests.run.xml
DEPRECATED_migrations/Executions/: v1.js  v2.js  v3.js
DEPRECATED_migrations/Resources/: v1.bandit.encrypted  v1.birds.encrypted  v1.dev.encrypted  v1.js  v1.prod.encrypted  v1.rocket.encrypted  v1.staging.encrypted  v2.js  v3.js  v4.js  v5.js
ag/: a.tf
cloudformation/jit-report/: results.json
data-transformations/Executions/: TEMPLATE_SCRIPT  v1.js  v2.js  v3.js  (+1 more)
docs/: index.md
gg/: a.py  package.json
monorepostuff2/: Dockerfile
pulumi/jit-report/: results.json
service_mocks/: dockerfile-dev  dockerfile-test  mock-compose.yml  requirements-mock-test.txt  requirements-mock.txt
tests/: aws_findings_payload_sample.json  code_findings_payload_sample.json  common.py  conftest.py  consts.py  factories.py  fixtures.py  jit_runner_findings_payload_sample.json
(+424 files in other folders)
